# python-tinyscript

./: .coveragerc  .gitignore  .readthedocs.yml  .tinyscript-test.ini  .travis.yml  MANIFEST.in  PKG-INFO  README.md  deck.txt  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tinyscript-new
.github/workflows/: pypi-publish.yml  python-package.yml  test.yml
doc/: features.md  usage.md
docs/: enhancements.md  examples.md  features.md  helpers.md  index.md  internals.md  mkdocs.yml  real-examples.md  reporting.md  requirements.txt  scripts.list  setup.md  shaping.md  usage.md  utility.md
docs/examples/: appmemdumper.md  demo.md  hotkeys.md  malicious-macro-tester.md  metadata.md  multi-level-debug.md  multi-level-help.md  recursive-compression.md  recursive-decompressor.md  simple-script.md  simple-tool.md  solitaire-cipher.md  step.md  sudo.md  timing.md
docs/examples-rl/: bots-scheduler.md  malicious-macro-tester.md  solitaire-cipher.md
docs/js/: collapsible-navbar.js
docs/pages/: enhancements.md  helpers.md  index.md  internals.md  shaping.md  tsm.md  usage.md  utility.md
docs/pages/examples/: hotkeys.md  metadata.md  multi-level-help.md  simple-script.md  simple-tool.md  timing.md
docs/pages/examples-rl/: appmemdumper.md  recursive-compression.md  solitaire-cipher.md
examples/: nested-decompressor.py  solitaire-cipher.py
scripts/: tinyscript
src/tinyscript/: VERSION.txt  __conf__.py  __info__.py  __init__.py  __main__.py  argreparse.py  parser.py  template.py
src/tinyscript/features/: handlers.py  hotkeys.py  interact.py  loglib.py  progress.py  step.py  timing.py
src/tinyscript/features/notify/: __init__.py
src/tinyscript/helpers/: __init__.py  attack.py  classprop.py  common.py  compat.py  constants.py  decorators.py  dictionaries.py  docstring.py  expressions.py  fexec.py  inputs.py  layout.py  notify.py  parser.py  password.py  path.py  termsize.py  text.py  timeout.py
src/tinyscript/helpers/data/: __init__.py  utils.py
src/tinyscript/helpers/data/transform/: __init__.py  common.py  report.py
src/tinyscript/helpers/data/types/: __init__.py  common.py  config.py  files.py  hash.py  network.py  strings.py
src/tinyscript/preimports/: __init__.py  codep.py  ftools.py  hash.py  inspectp.py  jsonp.py  log.py  pswd.py  rand.py  regex.py  shutilp.py  stringp.py  venv.py
src/tinyscript/report/: __init__.py  base.py  objects.py  report.py
tests/: conftest.py  test_argreparse.py  test_conf.py  test_deprecation.py  test_features_handlers.py  test_features_hotkeys.py  test_features_interact.py  test_features_loglib.py  test_features_notify.py  test_features_progress.py  test_features_step.py  test_features_timing.py  test_handlers.py  test_helpers_attack.py  test_helpers_classprop.py  test_helpers_code.py  test_helpers_common.py  test_helpers_compat.py  test_helpers_data_transform.py  test_helpers_data_types.py  test_helpers_data_utils.py  test_helpers_datatrans.py  test_helpers_decorators.py  test_helpers_dictionaries.py  test_helpers_docstring.py  test_helpers_expressions.py  test_helpers_fexec.py  test_helpers_inputs.py  test_helpers_lambdas.py  test_helpers_layout.py  test_helpers_licenses.py  test_helpers_parser.py  test_helpers_password.py  test_helpers_patch.py  test_helpers_path.py  test_helpers_text.py  test_helpers_timeout.py  test_helpers_types.py  test_helpers_utils.py  test_hotkeys.py  (+26 more)
tests/helpers/: test_lambdas.py  test_licenses.py  test_types.py
tinyscript/: VERSION.txt  __info__.py  __init__.py  __main__.py  argreparse.py  handlers.py  helpers.py  hotkeys.py  interact.py  loglib.py  parser.py  preimports.py  progress.py  report.py  step.py  template.py  timing.py  warnings.py
tinyscript/features/: __init__.py  handlers.py  hotkeys.py  loglib.py  step.py  timing.py
tinyscript/features/notify/: __init__.py
tinyscript/helpers/: __init__.py  attack.py  classprop.py  code.py  common.py  compat.py  constants.py  datatrans.py  decorators.py  dictionaries.py  expressions.py  fexec.py  inputs.py  lambdas.py  layout.py  licenses.py  notify.py  password.py  patch.py  path.py  termsize.py  text.py  timeout.py  types.py  utils.py
tinyscript/helpers/data/: __init__.py  transform.py  types.py  utils.py
tinyscript/helpers/data/transform/: common.py  report.py
tinyscript/helpers/data/types/: __init__.py  common.py  config.py  files.py  hash.py  network.py  strings.py
tinyscript/notify/: __init__.py
tinyscript/preimports/: __init__.py  codep.py  ftools.py  hash.py  inspectp.py  itools.py  log.py  pswd.py  rand.py  regex.py  stringp.py  venv.py
tinyscript/preimports/ncodecs/: __init__.py  _utils.py  ascii85.py  barbie.py  base.py  dna.py  leetspeak.py  markdown.py  morse.py  nokia3310.py  rotn.py  xor_byte.py
tinyscript/report/: __init__.py  base.py  default.css  objects.py  report.py
