[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.dynamic]
version = {attr = "tinyscript.__info__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.css", "*.png", "*.txt"]

[project]
name = "tinyscript"
authors = [
  {name="Alexandre D'Hondt", email="alexandre.dhondt@gmail.com"},
]
description = "Devkit for quickly building CLI tools with Python"
license = {file = "LICENSE"}
keywords = ["python", "development", "programming", "cli", "devkit"]
requires-python = ">=3.7,<4"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "asciistuff>=1.2.5",
  "bitstring<=3; python_version<'3.7'",
  "bitstring>3; python_version>='3.7'",
  "codext>=1.14.2",
  "coloredlogs",
  "colorful",
  "dicttoxml",
  "ipaddress>=1.0.23",
  "json2html",
  "lazy_object_proxy>=1.9.0",
  "markdown<3.4",
  "markdown2>=2.3.10; python_version=='2.7'",
  "markdown2>=2.4.0; python_version>='3.6'",
  "mdv; python_version<'3.9'",
  "mdv3; python_version>='3.9'",
  "netaddr",
  "netifaces",
  "patchy",
  "pathlib2",
  "pip>=20.3.4; python_version=='2.7'",
  "pip>=22.2; python_version>='3.6'",
  "plyer<2.0.0; python_version=='2.7'",
  "plyer>=2.0.0; python_version>='3.6'",
  "pygments>=2.5.2; python_version=='2.7'",
  "pygments>=2.8.1; python_version>='3.6'",
  "pyminizip",
  "pynput",
  "pypandoc",
  "pypiwin32; sys_platform=='windows'",
  "python-magic",
  "python-slugify",
  "pyyaml>=5.3.1",
  "setuptools; python_version>='3.8'",
  "six",
  "terminaltables",
  "toml",
  "tqdm",
  "virtualenv",
  "weasyprint; python_version>='3.5'",
  "xmltodict",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
documentation = "https://python-tinyscript.readthedocs.io/en/latest/?badge=latest"
homepage = "https://github.com/dhondta/python-tinyscript"
issues = "https://github.com/dhondta/python-tinyscript/issues"
repository = "https://github.com/dhondta/python-tinyscript"

[project.scripts]
tinyscript = "tinyscript.__main__:main"
