[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.dynamic]
version = {attr = "tinyscript.__info__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.css", "*.png", "*.txt"]

[project]
name = "tinyscript"
authors = [
  {name="Alexandre D'Hondt", email="alexandre.dhondt@gmail.com"},
]
description = "Devkit for quickly building CLI tools with Python"
license = {file = "LICENSE"}
keywords = ["python", "development", "programming", "cli", "devkit"]
requires-python = ">=3.8,<4"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "argcomplete>=3.0.8",
  "asciistuff>=1.2.5",
  "bitstring>3",
  "codext>=1.15.0",
  "coloredlogs",
  "colorful",
  "dateparser>=1.1.8",
  "dicttoxml",
  "ipaddress>=1.0.23",
  "json2html",
  "lazy_object_proxy>=1.9.0",
  "markdown2>=2.4.0",
  "netaddr",
  "netifaces",
  "patchy",
  "pathlib2",
  "pip>=23.0",
  "plyer>=2.0.0",
  "pygments>=2.8.1",
  "pyminizip",
  "pynput",
  "pypandoc",
  "pypiwin32; sys_platform=='windows'",
  "python-magic",
  "python-slugify",
  "pyyaml>=5.3.1",
  "requests",
  "rich",
  "setuptools>=65.5.1",
  "six",
  "terminaltables",
  "toml",
  "tqdm",
  "virtualenv>=20.8.1",
  "weasyprint",
  "xmltodict",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
documentation = "https://python-tinyscript.readthedocs.io/en/latest/?badge=latest"
homepage = "https://github.com/dhondta/python-tinyscript"
issues = "https://github.com/dhondta/python-tinyscript/issues"
repository = "https://github.com/dhondta/python-tinyscript"

[project.scripts]
tsm = "tinyscript.__main__:main"
