[metadata]
name = tinyscript
version = file: tinyscript/VERSION.txt
author = Alexandre D'Hondt
author_email = alexandre.dhondt@gmail.com
url = https://github.com/dhondta/python-tinyscript
description = Devkit for quickly building CLI tools with Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    python
    development
    programming
    framework
    cli
    devkit
license = AGPLv3
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
test_suite = tests
include_package_data = False
scripts = scripts/tinyscript
install_requires =
    asciistuff>=1.0.7
    bitstring
    codext
    coloredlogs
    colorful
    dicttoxml
    ipaddress
    json2html
    mdv
    netaddr
    netifaces
    patchy
    pathlib
    pip
    plyer
    pynput
    pypandoc
    python-slugify
    pyyaml>=5.3.1
    six
    toml
    tqdm
    virtualenv
    weasyprint; python_version>='3.5'
    xmltodict
setup_requires = setuptools
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*!=3.4.*,<4

[options.package_data]
* = *.css,*.png,*.txt
