[metadata]
name = tinyscript
version = file: tinyscript/VERSION.txt
author = Alexandre D'Hondt
author_email = alexandre.dhondt@gmail.com
url = https://github.com/dhondta/python-tinyscript
description = Devkit for quickly building CLI tools with Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    python
    programming
    development
    cli
    dev-kit
license = GPLv3
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
test_suite = tests
include_package_data = False
install_requires =
    asciistuff>=1.1.1
    bitstring
    codext>=1.8.0
    coloredlogs
    colorful
    dicttoxml
    ipaddress>=1.0.23
    json2html
    mdv; python_version<'3.9'
    mdv3; python_version>='3.9'
    netaddr
    netifaces
    patchy
    pathlib
    pip>=19.2
    plyer<2.0.0; python_version=='2.7'
    plyer>=2.0.0; python_version>='3.6'
    pygments
    pyminizip
    pynput
    pypandoc
    pypiwin32; sys_platform=='windows'
    python-magic
    python-slugify
    pyyaml>=5.3.1
    six
    terminaltables
    toml
    tqdm
    virtualenv
    weasyprint; python_version>='3.5'
    xmltodict
setup_requires = setuptools
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*,<4

[options.package_data]
* = *.css,*.png,*.txt

[options.entry_points]
console_scripts =
    tinyscript = tinyscript.__main__:main
